@@ -19,11 +19,10 @@ import static org.apache.commons.lang.CharEncoding.UTF_8;
 import com.google.common.collect.Lists;
 import com.google.common.io.ByteSink;
 import com.google.common.io.ByteSource;
-import org.openqa.selenium.net.PortProber;
-
 
 import org.mortbay.http.HttpContext;
 import org.mortbay.http.HttpException;
+import org.mortbay.http.HttpFields;
 import org.mortbay.http.HttpMessage;
 import org.mortbay.http.HttpRequest;
 import org.mortbay.http.HttpResponse;
@@ -34,15 +33,15 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.charset.Charset;
+import java.util.Deque;
 import java.util.List;
+import java.util.zip.GZIPInputStream;
 
 /**
  * HTTP server used to verify requests and send mocked responses.
- *
- * @author Adam Rogal
  */
 public class TestHttpServer {
-
+  
   private InternalHttpServer server;
 
   /**
@@ -56,7 +55,7 @@ public class TestHttpServer {
    * @throws Exception an arbitrary exception may be thrown
    */
   public void start() throws Exception {
-    server = new InternalHttpServer();
+    server = new InternalHttpServer(TestPortFinder.getInstance().checkOutUnusedPort());
     server.start();
   }
 
@@ -69,15 +68,24 @@ public class TestHttpServer {
    */
   public void stop() throws InterruptedException {
     server.stop();
+    TestPortFinder.getInstance().releaseUnusedPort(server.port);
   }
 
   /**
-   * Gets the body of the last request made to the server.
+   * Gets the body of the last request made to the server. This will be the inflated body if
+   * the last request was compressed.
    */
   public String getLastRequestBody() {
     return server.getLastRequestBody();
   }
 
+  /**
+   * Gets if the body of the last request made to the server was compressed.
+   */
+  public boolean wasLastRequestBodyCompressed() {
+    return server.wasLastRequestBodyCompressed();
+  }
+  
   /**
    * Gets the body of the all requests made to the server, in order from oldest
    * to newest.
@@ -107,14 +115,22 @@ public class TestHttpServer {
    * Sets the response body to return on the next request.
    */
   public void setMockResponseBody(String mockResponseBody) {
-    server.mockResponseBodies = Lists.newArrayList(mockResponseBody);
+    setMockResponseBodies(Lists.newArrayList(mockResponseBody));
   }
 
   /**
-   * Sets the response body to return on subsequent requests.
+   * Sets the response bodies to return on subsequent requests.
    */
   public void setMockResponseBodies(List<String> mockResponseBodies) {
-    server.mockResponseBodies = Lists.newArrayList(mockResponseBodies);
+    server.mockResponseBodies.clear();
+    server.mockResponseBodies.addAll(mockResponseBodies);
+  }
+  
+  /**
+   * Sets the delay in milliseconds before the server responds.
+   */
+  public void setDelay(long delay) {
+    server.delay = delay;
   }
 
   /**
@@ -129,20 +145,22 @@ public class TestHttpServer {
    */
   private class InternalHttpServer extends Server {
 
-    private int port;
+    private final int port;
     private int numInteractions = 0;
-    private List<String> requestBodies = Lists.newArrayList();
-    private List<String> authorizationHttpHeaders = Lists.newArrayList();
-    private List<String> mockResponseBodies = Lists.newArrayList();
+    private long delay = 0;
+    private final Deque<String> requestBodies = Lists.newLinkedList();
+    private final Deque<Boolean> requestBodiesCompressionStates = Lists.newLinkedList();
+    private final Deque<String> authorizationHttpHeaders = Lists.newLinkedList();
+    private final List<String> mockResponseBodies = Lists.newArrayList();
 
     /**
      * Default constructor.
      *
      * @throws IOException if port could not be set
      */
-    public InternalHttpServer() throws IOException {
+    public InternalHttpServer(int port) throws IOException {
       super();
-      port = PortProber.findFreePort();
+      this.port = port;
       addListener(new InetAddrPort(port));
     }
 
@@ -158,13 +176,40 @@ public class TestHttpServer {
         throws IOException, HttpException {
       request.setState(HttpMessage.__MSG_EDITABLE);
       this.authorizationHttpHeaders.add(request.getHeader().get("Authorization"));
-      this.requestBodies.add(new ByteSource() {
+      
+      // Read the raw bytes from the request.
+      final byte[] rawRequestBytes = new ByteSource() {
+        @Override
         public InputStream openStream() throws IOException {
           return request.getInputStream();
         }
-      }.asCharSource(Charset.forName(UTF_8)).read());
-
+      }.read();
+      
+      // Inflate the raw bytes if they are in gzip format. 
+      boolean isGzipFormat = "gzip".equals(request.getHeader().get(HttpFields.__ContentEncoding));
+      
+      byte[] requestBytes;
+      if (isGzipFormat) {
+        requestBytes = new ByteSource(){
+          @Override
+          public InputStream openStream() throws IOException {
+            return new GZIPInputStream(ByteSource.wrap(rawRequestBytes).openStream());
+          }
+        }.read();
+      } else {
+        requestBytes = rawRequestBytes;
+      }
+      
+      // Convert the (possibly inflated) request bytes to a string.
+      this.requestBodies.add(
+          ByteSource.wrap(requestBytes).asCharSource(Charset.forName(UTF_8)).read());
+      this.requestBodiesCompressionStates.add(isGzipFormat); 
+      
+      // Simulate a delay in processing.
+      simulateDelay();  
+      
       new ByteSink() {
+        @Override
         public OutputStream openStream() {
           return response.getOutputStream();
         }
@@ -172,20 +217,38 @@ public class TestHttpServer {
 
       return getContext(getServerUrl());
     }
+    
+    /**
+     * Simulates delays in processing requests. 
+     */
+    private void simulateDelay() throws HttpException {
+      try {
+        Thread.sleep(this.delay);
+      } catch (InterruptedException e) {
+        throw new HttpException(500, e.getMessage());
+      }
+    }
 
     /**
      * Gets the body of the last request made to the server.
      */
     private String getLastRequestBody() {
-      return requestBodies.get(requestBodies.size() - 1);
+      return requestBodies.getLast();
     }
-
+    
+    /**
+     * Returns if the last request body was compressed.
+     */
+    private boolean wasLastRequestBodyCompressed() {
+      return requestBodiesCompressionStates.getLast();
+    }
+    
     /**
      * Gets the authorization header of the last request made to the server or
      * {@code null} if none.
      */
     private String getLastAuthorizationHttpHeader() {
-      return authorizationHttpHeaders.get(authorizationHttpHeaders.size() - 1);
+      return authorizationHttpHeaders.getLast();
     }
   }
 }
